2011-05-17  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/python.el (python-font-lock-keywords):
	Add the Python 3.X keyword "nonlocal" (bug#8639).

2011-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio.el (defmethod): Fix quoting of code (bug#8677).

2011-05-16  Kevin Ryde  <user42@zip.com.au>

	* info-look.el (makefile-automake-mode): New setups, looking in
	automake manual, then makefile-mode.
	(makefile-mode): Remove automake manual, have it just in
	makefile-automake-mode since there's various things different or
	not relevant to plain make.
	(makefile-mode): Remove "other-modes" non-existent automake-mode,
	believe a hypothetical automake-mode would go to makefile-mode,
	not the other way around.

2011-05-15  Chong Yidong  <cyd@stupidchicken.com>

	* vc/diff-mode.el (diff-fixup-modifs): Locate correct position for
	hunk-end tags (Bug#8672).

	* vc/vc-annotate.el (vc-annotate-mode-map): Bind = to
	vc-annotate-show-diff-revision-at-line (Bug#8671).

2011-05-14  Glenn Morris  <rgm@gnu.org>

	* vc/add-log.el (add-change-log-entry): Don't start adding a new entry
	in the middle of an existing one with multiple authors.  (Bug#8645)
	(change-log-font-lock-keywords): Also handle multiple author lines
	with leading tabs.  (Bug#8644)

	* calendar/appt.el (appt-check): Rename some local variables.
	Some simplification/reordering.

	* mail/feedmail.el (feedmail-confirm-outgoing-timeout)
	(feedmail-sendmail-f-doesnt-sell-me-out)
	(feedmail-queue-slug-suspect-regexp, feedmail-debug)
	(feedmail-debug-sit-for, feedmail-queue-express-hook)
	(feedmail-queue-runner-message-sender): Set :version.
	(bbdb-search, bbdb-records, smtp-via-smtp, smtp-server)
	(bbdb-dwim-net-address, vm-mail): Declare.
	(feedmail-binmail-gnulinuxish-template):
	Rename from feedmail-binmail-linuxish-template.
	(feedmail-buffer-to-smtp, feedmail-vm-mail-mode):
	Use insert-buffer-substring.

2011-05-14  Bill Carpenter  <bill@carpenter.org>
